--- a/paginas/index.html
+++ b/paginas/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="../css/style.css" rel="stylesheet">
+        <link rel="icon" href="../img/logo.png" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -15,8 +16,8 @@
                         <a href="./index.html">Inicio</a>
                         <a href="./catalogo.html">Catálogo</a>
                         <a href="./historia.html">Historia</a>
-                        <a href="./certificaciones.html">Certificaciones</a>
-                        <a href="./contactenos.html">Contáctenos</a>
+                        <a href="#">Certificaciones</a>
+                        <a href="#">Contáctenos</a>
                     </ul>
                  </div>
             </nav>
@@ -26,8 +27,15 @@
             <h1 class="h1">Producto más vendido</h1>
             <div class="tarjeta">
                 <div class="card1">
-                    <img src="../img/torrejuguetegato.jpg" alt="Torre de gato" class="card img">
-                <h2 class="h2">con este nuevo juguete tu mascota podrá jugar todo el día y cuando se acabe la emoción </h2>
+                    <img src="../img/torrejuguetegato.jpg" alt="Torre de gato" class="img">
+                    <div><h2 class="h2">Con este nuevo juguete tu mascota podrá jugar todo el día
+                        se divertira mucho tu gatito y podra descansar cuando termine de jugar
+                    </h2>
+                    <button class="card button">
+                        <h2><a href="catalogo.html">Catálogo</a>
+                        </h2>
+                    </button>
+                </div>
                 </div>
             </div>
             <br>
@@ -42,7 +50,7 @@
                     <div class="card">
                         <img src="../img/casatela.webp" alt="Casa">
                         <h1>Casa de tela</h1>
-                        <h3>Ha sido especialmente diseñada para proporcionar un lugar seguro y cálido para tu gatito.</h3>
+                        <h3>Ha sido diseñada para proporcionar un lugar seguro y cálido para tu gatito.</h3>
                         <p>Precio: $20:00</p>
                         
                     </div>
@@ -76,5 +84,10 @@
                 </div>
             </div>
         </main>
+        <br>
+        <br>
+        <footer>
+            <p> © Derechos reservados    Estudiantes de primer año "Angel Ramos 20250443" 2025</p>
+        </footer>
     </body>
 </html>
