--- a/paginas/certificaciones.html
+++ b/paginas/certificaciones.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Sparkle Veti</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
-        <link rel="icon" href="../img/logo.png" type="image/x-icon">
-    </head>
-    <body>
-        <header>
-            <nav>
-                 <div>
-                    <ul>
-                        <a href="index.html"><img src="../img/logo.png" alt="logo"></a>
-                        <a href="./index.html">Inicio</a>
-                        <a href="./catalogo.html">Catálogo</a>
-                        <a href="./historia.html">Historia</a>
-                        <a href="#">Certificaciones</a>
-                        <a href="#">Contáctenos</a>
-                    </ul>
-                 </div>
-            </nav>
-        </header>
-        <main>
-            <div>
-                <img src="../img/certificado.png" alt="certificacion" class="img">
-            </div>
-            <div class="tarjeta">
-                <div class="card">
-                    <img src="../img/gatocomiendo.webp" alt="Comida">
-                    <h1>Alimentos</h1>
-                </div>
-                <div class="tarjeta">
-                    <div class="card">
-                        <img src="../img/gatodescansando.jpg" alt="Cama">
-                        <h1>Camas</h1>
-                    </div>
-                </div>
-                <div class="tarjeta">
-                    <div class="card">
-                        <img src="../img/juguetes.jpg" alt="Juguetes">
-                        <h1>Juguetes</h1>  
-                    </div>
-                </div>
-                <div class="tarjeta">
-                    <div class="card">
-                        <img src="../img/higiene.jpg" alt="Higiene">
-                        <h1>Higiene</h1> 
-                    </div>
-                </div>
-            </div>
-        </main>
+  <head>
+    <title>Sparkle Veti</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <ul>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo" /></a>
+            <a href="../index.html">Inicio</a>
+            <a href="./catalogo.html">Catálogo</a>
+            <a href="./historia.html">Historia</a>
+            <a href="#">Certificaciones</a>
+            <a href="#">Contáctenos</a>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <img src="../img/certificado.png" alt="certificacion" class="img" />
+      </div>
+      <div class="tarjeta">
+        <div class="card">
+          <img src="../img/gatocomiendo.webp" alt="Comida" />
+          <h1>Alimentos</h1>
+        </div>
+        <div class="tarjeta">
+          <div class="card">
+            <img src="../img/gatodescansando.jpg" alt="Cama" />
+            <h1>Camas</h1>
+          </div>
+        </div>
+        <div class="tarjeta">
+          <div class="card">
+            <img src="../img/juguetes.jpg" alt="Juguetes" />
+            <h1>Juguetes</h1>
+          </div>
+        </div>
+        <div class="tarjeta">
+          <div class="card">
+            <img src="../img/higiene.jpg" alt="Higiene" />
+            <h1>Higiene</h1>
+          </div>
+        </div>
+      </div>
+    </main>
 
-        <footer>
-            <p> © Derechos reservados    Estudiantes de primer año "Angel Ramos 20250443" 2025</p>
-        </footer>
-    </body>
+    <footer>
+      <p>
+        © Derechos reservados Estudiantes de primer año "Angel Ramos 20250443"
+        2025
+      </p>
+    </footer>
+  </body>
 </html>
