--- a/paginas/historia.html
+++ b/paginas/historia.html
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Sparkle Veti</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
-        <link rel="icon" href="../img/logo.png" type="image/x-icon">
-    </head>
-    <body>
-        <header>
-            <nav>
-                 <div>
-                    <ul>
-                        <a href="index.html"><img src="../img/logo.png" alt="logo"></a>
-                        <a href="./index.html">Inicio</a>
-                        <a href="./catalogo.html">Catálogo</a>
-                        <a href="./historia.html">Historia</a>
-                        <a href="#">Certificaciones</a>
-                        <a href="#">Contáctenos</a>
-                    </ul>
-                 </div>
-            </nav>
-        </header>
-        <main>
-            <div class="texto">
-                <h1 class="h1">La historia de la tienda de accesorios de Sparkle Veti</h1>
-            <br>
-            <img src="../img/accesorios-basico-gatos.jpg" alt="Accesorios para gato" class="img">
-            <h1>!!Bienvenido a Sparkle Veti, donde el amor por las mascotas se convierte en accesorios 
-                llenos de magia!!</h1>
-                <br>
-            <h2 class="h2">Todo comenzo con un pequeño gatito llamada Sparkle una felina con ojos brillantes y un espiritu aventurero. Desde el primer dia en su hogar Veti demostró
-                que era más que una mascota; era parte de la familia y su dueña noto que Veti siempre buscaba lo más comodo y brillante, desde camas suaves hasta collares.
-                Inspirada por su elegancia y energia, ella decidió crear Sparkle Veti, una marca de accesorios para mascotas que combinara estilo, comodidad y calidad.
-            </h2>
-            <br>
-            <h2>El objetivo de Sparkle Veti es ofrecer lo mejor para sus compañeros peludos, desde collares hasta camas acogedoras y juguetes entretenidos. Cada producto esta diseñado 
-                pensando en el bienestar de cada mascota. Porque sabemos que ellos no son solo animales, son parte de nuestra historia.
-            </h2>
-            <br>
-            <h2>Asi como veti inspiró esta marca, queremos que cada mascota brille con su propio estilo.
-            </h2>
-            </div>
-        </main>
+  <head>
+    <title>Sparkle Veti</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <ul>
+            <a href="../index.html"><img src="../img/logo.png" alt="logo" /></a>
+            <a href="../index.html">Inicio</a>
+            <a href="./catalogo.html">Catálogo</a>
+            <a href="./historia.html">Historia</a>
+            <a href="#">Certificaciones</a>
+            <a href="#">Contáctenos</a>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="texto">
+        <h1 class="h1">
+          La historia de la tienda de accesorios de Sparkle Veti
+        </h1>
+        <br />
+        <img
+          src="../img/accesorios-basico-gatos.jpg"
+          alt="Accesorios para gato"
+          class="img"
+        />
+        <h1>
+          !!Bienvenido a Sparkle Veti, donde el amor por las mascotas se
+          convierte en accesorios llenos de magia!!
+        </h1>
+        <br />
+        <h2 class="h2">
+          Todo comenzo con un pequeño gatito llamada Sparkle una felina con ojos
+          brillantes y un espiritu aventurero. Desde el primer dia en su hogar
+          Veti demostró que era más que una mascota; era parte de la familia y
+          su dueña noto que Veti siempre buscaba lo más comodo y brillante,
+          desde camas suaves hasta collares. Inspirada por su elegancia y
+          energia, ella decidió crear Sparkle Veti, una marca de accesorios para
+          mascotas que combinara estilo, comodidad y calidad.
+        </h2>
+        <br />
+        <h2>
+          El objetivo de Sparkle Veti es ofrecer lo mejor para sus compañeros
+          peludos, desde collares hasta camas acogedoras y juguetes
+          entretenidos. Cada producto esta diseñado pensando en el bienestar de
+          cada mascota. Porque sabemos que ellos no son solo animales, son parte
+          de nuestra historia.
+        </h2>
+        <br />
+        <h2>
+          Asi como veti inspiró esta marca, queremos que cada mascota brille con
+          su propio estilo.
+        </h2>
+      </div>
+    </main>
 
-        <footer>
-            <p> © Derechos reservados    Estudiantes de primer año "Angel Ramos 20250443" 2025</p>
-        </footer>
-    </body>
+    <footer>
+      <p>
+        © Derechos reservados Estudiantes de primer año "Angel Ramos 20250443"
+        2025
+      </p>
+    </footer>
+  </body>
 </html>
